--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,5 +11,6 @@
 <body>
 	<button id="testAddBtn">test/add</button>
 	<button id="testFormBtn">test/form</button>
+	<button id="weiXinVerifyBtn">weiXin/verify</button>
 </body>
 </html>
