--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,11 +6,14 @@
 <script type="text/javascript" src="resources/js/lib/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="resources/js/lib/json2.js"></script>
 <script type="text/javascript" src="resources/js/lib/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="resources/js/lib/xml-json.js"></script>
 <script type="text/javascript" src="test/js/index-test.js"></script>
 </head>
 <body>
-	<button id="testAddBtn">test/add</button>
-	<button id="testFormBtn">test/form</button>
-	<button id="weiXinVerifyBtn">weiXin/verify</button>
+	<button id="testAddBtn">test/add.do</button>
+	<button id="testFormBtn">test/form.do</button>
+	<button id="testRespBodyBtn">test/respBody.do</button>
+	<!-- <button id="weiXinVerifyBtn">weiXin/verify.do</button> -->
+	<button id="weiXinVerifyBtn">weiXin/verify.do</button>
 </body>
 </html>
